fix img use z-index 0

--- a/src/img.module.scss
+++ b/src/img.module.scss
@@ -20,16 +20,19 @@
     --default-img-gradient-color: var(--img-gradient-from-color, rgba(0, 0, 0, 0.05));
 
     --img-mask-move: 60px;
-    --img-bg-color-index: 0;
-    --img-bg-img-index: 1;
-    --img-content-index: 2;
+    --img-bg-color-index: 0; // before
+    --img-bg-img-index: 1;   // after
+    --img-content-index: 2;  // content
 
     width: var(--img-width);
     height: var(--img-height);
-    position: relative;
-    border-radius: var(--img-radius);
-    overflow: hidden;
     aspect-ratio: var(--img-aspect);
+    border-radius: var(--img-radius);
+
+    position: relative;
+    overflow: hidden;
+    z-index: 0;
+
 
     > * {
         position: relative;
@@ -80,7 +83,7 @@
     }
 
 
-    &[data-mask]{
+    &[data-loader]{
         &:before{
             opacity: 0.8;
             width: calc(100% + var(--img-mask-move));
